fix scrollbar

--- a/public/css/argon-design-system.css
+++ b/public/css/argon-design-system.css
@@ -67,6 +67,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    height: 100%;
 }
 
 article,
@@ -20394,7 +20395,7 @@ textarea[resize="horizontal"] {
   position: relative;
   padding-top: 4rem;
   padding-bottom: 4rem;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .sections {
@@ -20408,8 +20409,8 @@ textarea[resize="horizontal"] {
   padding-bottom: 8rem;
 }
 .section-xxl {
-    padding-top: 20rem;
-    padding-bottom: 20rem;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
 }
 
 .section-lg {
